tests/golden/err-unknown-tag/expected_error.txt
error: `Tag` に `.dvi` はありません
 --> main.clum:4:7
  |
4 |     h .dvi
  |       ^^^^ もしかして `.div` ですか？
